通用静态资源

--- a/blank.html
+++ b/blank.html
@@ -7,14 +7,14 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
-  <link rel = "Shortcut Icon" href="https://microdemo.bihe0832.com/res/images/zixie_32.ico" />
+  <link rel = "Shortcut Icon" href="https://cdn.bihe0832.com/res/images/zixie_32.ico" />
 
   <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
   <meta name="keywords" content="子勰,bihe0832" />
   <meta name="description" content="子勰的空白页面" />
   <title>子勰的空白页面</title>
 
-  <link rel="stylesheet" type="text/css" href="https://microdemo.bihe0832.com/res/css/global.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/res/css/global.css" />
   <style type="text/css">
 
       body {
