通用静态资源转到CDN

--- a/tools/router/index.html
+++ b/tools/router/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <script type="text/javascript">
-        var indexUrl = "https://microdemo.bihe0832.com/MyJS/router/jump.html?value="
+        var indexUrl = "https://cdn.bihe0832.com/tools/router/jump.html?value="
         function getUrlParam(name) {
             var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
             var r = window.location.search.substr(1).match(reg);
