--- a/blank.html
+++ b/blank.html
@@ -1,36 +1,70 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
-  <link rel = "Shortcut Icon" href="https://cdn.bihe0832.com/res/images/zixie_32.ico" />
+  <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/res/images/zixie_32.ico" />
 
+  <title>子勰的空白页面</title>
   <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
   <meta name="keywords" content="子勰,bihe0832" />
   <meta name="description" content="子勰的空白页面" />
-  <title>子勰的空白页面</title>
-
-  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/res/css/global.css" />
-  <style type="text/css">
-
-      body {
-      	line-height: 1;
-      	font-family: Microsoft Yahei,'Kelly Slab', cursive;
-      	color: #333;
-      	font-size: 0.9em;
-      }
-  </style>
-</head>
-<body>
-
-
- <script type="text/javascript" charset="UTF-8">
+  <meta property="og:title" content="首页" />
+  <meta property="og:locale" content="en_US" />
+  <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
+  <meta property="og:description" content="" />
+  <link rel="canonical" href="https://blog.bihe0832.com/" />
+  <meta property="og:url" content="https://blog.bihe0832.com/" />
+  <meta property="og:site_name" content="子勰的博客" />
+  <meta property="og:type" content="article" />
+  <script type="application/ld+json">
+  {
+      "@type":"BlogPosting",
+      "url":"https://blog.bihe0832.com/",
+      "headline":"首页",
+      "dateModified":" 2021-01-06 17:28:45 +0800",
+      "datePublished":" ",
+      "author":{"@type":"Person","name":"子勰"},
+      "description":"",
+      "publisher":{
+          "@type":"Organization",
+          "name":"子勰",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://blog.bihe0832.com/public/img/head.jpg"
+          }
+        },
+      "image": "https://blog.bihe0832.com/public/img/cv.png",
+      "mainEntityOfPage":{"@type":"WebPage",
+      "@id":"https://blog.bihe0832.com/"},
+      "@context":"http://schema.org"
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "",
+        "item": "https://blog.bihe0832.com/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "首页",
+        "item": "https://blog.bihe0832.com/"
+      }]
+    }
+  </script>
+  <script type="text/javascript" charset="UTF-8">
     var _mtac = {};
-    (function() {
+    (function () {
       var mta = document.createElement("script");
       mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
       mta.setAttribute("name", "MTAH5");
@@ -38,7 +72,24 @@
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(mta, s);
     })();
-</script>
+  </script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/res/css/global.css" />
+
+  <style type="text/css">
+    body {
+      line-height: 1;
+      font-family: Microsoft Yahei, 'Kelly Slab', cursive;
+      color: #333;
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+
+<body>
+
+
+
 
 </body>
+
 </html>
