--- a/app/download.html
+++ b/app/download.html
@@ -7,18 +7,18 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
   <link rel = "Shortcut Icon" href="https://cdn.bihe0832.com/res/images/zixie_32.ico" />
-  <title>AndroidAppFactory —— 基于AAF的开发事例</title>
+  <title>AndroidAppFactory —— 基于AAF的开发实践</title>
   <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
   <meta name="keywords" content="子勰,bihe0832" />
-  <meta name="description" content="AndroidAppFactory —— 基于AAF的开发事例" />
+  <meta name="description" content="AndroidAppFactory —— 基于AAF的开发实践" />
 
-  <meta property="og:title" content="AndroidAppFactory —— 基于AAF的开发事例" />
+  <meta property="og:title" content="AndroidAppFactory —— 基于AAF的开发实践" />
   <meta property="og:locale" content="en_US" />
   <meta name="google-site-verification" content="3wzNgbjvFNHkH-8QpougMZ0s9Y4GEjG49kEb49QQqpw" />
-  <meta property="og:description" content="AndroidAppFactory —— 基于AAF的开发事例" />
+  <meta property="og:description" content="AndroidAppFactory —— 基于AAF的开发实践" />
   <link rel="canonical" href="https://android.bihe0832.com/" />
   <meta property="og:url" content="https://android.bihe0832.com/" />
-  <meta property="og:site_name" content="基于AAF的开发事例" />
+  <meta property="og:site_name" content="基于AAF的开发实践" />
 
     <script type="text/javascript" src="https://cdn.bihe0832.com/js/brower.js" charset="UTF-8"></script>
 
@@ -130,9 +130,9 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline">
-                <li><a href="https://android.bihe0832.com/samples/"  target="_blank">事例首页</a></li>
-                <li><a href="https://github.com/bihe0832/AndroidAppFactory-Sample"  target="_blank">事例源码</a></li>
-                <li><a href="https://android.bihe0832.com/" target="_blank">框架介绍</a></li>
+                <li><a href="https://android.bihe0832.com/samples/"  target="_blank">实践首页</a></li>
+                <li><a href="https://github.com/bihe0832/AndroidAppFactory-Sample"  target="_blank">查看源码</a></li>
+                <li><a href="https://android.bihe0832.com/" target="_blank">框架文档</a></li>
                 <li><a href="https://github.com/bihe0832/AndroidAppFactory"  target="_blank">框架源码</a></li>
                 <li><a href="https://blog.bihe0832.com/repositories.html"  target="_blank">关于作者</a></li>
             </ul>
@@ -155,7 +155,7 @@
     var _mtac = {};
     (function() {
       var mta = document.createElement("script");
-      mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.4";
+      mta.src = "https://pingjs.qq.com/h5/stats.js?v2.0.4";
       mta.setAttribute("name", "MTAH5");
       mta.setAttribute("sid", "500724774");
       var s = document.getElementsByTagName("script")[0];
