--- a/app/download.html
+++ b/app/download.html
@@ -103,9 +103,9 @@
           </div>
           <div class="col-md-4 text-center" >
             <div class="service-item color-white">
-              <img class="download_qrcode" alt="扫描下载来拼图" src="http://cdn.bihe0832.com/images/head.jpg">
+              <img class="download_qrcode" alt="扫描下载来拼图" src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://cdn.bihe0832.com/app/release/ZPUZZLE_V1.0.0_34_0107_official.apk">
               <h3>来拼图</h3>
-              <h4>开发中，敬请期待</h4>
+              <h4><a class="color-white hover-white" href="https://cdn.bihe0832.com/app/release/ZPUZZLE_V1.0.0_34_0107_official.apk">点击下载到本地</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
