--- a/app/download.html
+++ b/app/download.html
@@ -95,7 +95,7 @@
        <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center color-white">
-            <h2>基于AAF的开发的应用</h2>
+            <h2>基于AAF开发的应用</h2>
             <hr>
             <BR>
           </div>
@@ -137,7 +137,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline">
-                <li><a href="https://android.bihe0832.com/samples/"  target="_blank">实践首页</a></li>
+                <li><a href="https://android.bihe0832.com/samples/"  target="_blank">事例首页</a></li>
                 <li><a href="https://github.com/bihe0832/AndroidAppFactory-Sample"  target="_blank">查看源码</a></li>
                 <li><a href="https://android.bihe0832.com/" target="_blank">框架文档</a></li>
                 <li><a href="https://github.com/bihe0832/AndroidAppFactory"  target="_blank">框架源码</a></li>
