--- a/blank.html
+++ b/blank.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE HTML>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0" />
@@ -78,7 +75,7 @@
   <style type="text/css">
     body {
       line-height: 1;
-      font-family: Microsoft Yahei, 'Kelly Slab', cursive;
+      font-family: Microsoft Yahei;
       color: #333;
       font-size: 0.9em;
     }
