--- a/app/download.html
+++ b/app/download.html
@@ -102,16 +102,16 @@
         <div class="row">
           <div class="col-md-4 text-center">
             <div class="service-item  color-white" >
-              <img class="download_qrcode download_qrcode_border" alt="扫描下载应用信息获取" src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://cdn.bihe0832.com/app/release/ZAPK_V1.1.1_16_1130_official.apk">
+              <img class="download_qrcode download_qrcode_border" alt="扫描下载应用信息获取" src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://cdn.bihe0832.com/app/release/ZAPK_official.apk">
               <h3>应用信息查看工具</h3>
-              <h4><a class="color-white hover-white" href="https://cdn.bihe0832.com/app/release/ZAPK_V1.1.1_16_1130_official.apk">点击下载到本地</a></h4>
+              <h4><a class="color-white hover-white" href="https://cdn.bihe0832.com/app/release/ZAPK_official.apk">点击下载到本地</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center" >
             <div class="service-item color-white">
-              <img class="download_qrcode download_qrcode_border" alt="扫描下载来拼图" src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://cdn.bihe0832.com/app/release/ZPUZZLE_V1.0.0_34_0107_official.apk">
+              <img class="download_qrcode download_qrcode_border" alt="扫描下载来拼图" src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://cdn.bihe0832.com/app/release/ZPUZZLE_official.apk">
               <h3>来拼图</h3>
-              <h4><a class="color-white hover-white" href="https://cdn.bihe0832.com/app/release/ZPUZZLE_V1.0.0_34_0107_official.apk">点击下载到本地</a></h4>
+              <h4><a class="color-white hover-white" href="https://cdn.bihe0832.com/app/release/ZPUZZLE_official.apk">点击下载到本地</a></h4>
             </div>
           </div>
           <div class="col-md-4 text-center">
