--- a/app/help/zpuzzle.html
+++ b/app/help/zpuzzle.html
@@ -49,6 +49,10 @@
 </head>
 <body>
   <details open>
+    <summary>1.1.0 主要更新</summary>
+    <p>添加隐私及权限说明</p>
+  </details>
+  <details>
     <summary>1.0.1 主要更新</summary>
     <p>支持不选择图片，直接使用应用Logo 拼图体验</p>
     <p>优化拼图成功后的提示</p>
