--- a/app/help/zapk.html
+++ b/app/help/zapk.html
@@ -49,7 +49,11 @@
 </head>
 <body>
   <details open>
-    <summary>1.0.1 主要更新</summary>
+    <summary>1.2.0 主要更新</summary>
+    <p>添加隐私及权限说明</p>
+  </details>
+  <details>
+    <summary>1.1.1 主要更新</summary>
     <p>直接遍历已安装应用，并列表展示应用的信息</p>
     <p>支持查看应用版本号、安装时间、更新时间、签名信息、安装包信息</p>
     <p>一键卸载当前已安装应用</p>
