拼图关闭原有闪屏

--- a/app/help/zpuzzle.html
+++ b/app/help/zpuzzle.html
@@ -49,6 +49,10 @@
 </head>
 <body>
   <details open>
+    <summary>1.1.1 主要更新</summary>
+    <p>修复了一些bug</p>
+  </details>
+  <details>
     <summary>1.1.0 主要更新</summary>
     <p>添加隐私及权限说明</p>
   </details>
