添加常用工具链接

--- a/tools/jsbridge/index.html
+++ b/tools/jsbridge/index.html
@@ -48,6 +48,10 @@
         <li>
             在console中查看返回结果
         </li>
+        <li>
+          想要了解更多信息，可以点击链接 <a href="https://android.bihe0832.com/doc/tools/android_jsbridge.html">https://android.bihe0832.com/doc/tools/android_jsbridge.html</a>
+        </li>
+        
     </ul>
     </p>
     <script type="text/javascript" charset="UTF-8">
