--- a/tools/router/index.html
+++ b/tools/router/index.html
@@ -29,7 +29,7 @@
                         value="mna://herovideo?appid=1104466820&heroid=花木兰&heroname=花木兰">
                     <input id="router-result" type="text" class="form-control" disabled="true" value="扫码后跳转的URL为：">
                 </div>
-                <span class="text-primary">注意事项：路由地址请填写完整路径，如果是URL，不需要编码</span>
+                <span class="text-primary">注意事项：路由地址请填写完整路径，<strong>如果是URL，不需要编码</strong>，想了解更多内容，可以点击链接：<a href="https://android.bihe0832.com/doc/tools/android_schema.html">https://android.bihe0832.com/doc/tools/android_schema.html</a></span>
             </div>
 
             <div>
