--- a/tools/index.html
+++ b/tools/index.html
@@ -278,7 +278,7 @@
             name: '开发常用资源',
             intro: '开发中常用的资源，静态资源例如空页面、CSS；方便开发测试的各种素材等',
             img: 'https://cdn.bihe0832.com/images/cv.png',
-            url: 'https://blog.bihe0832.com/cdn-list.html'
+            url: 'https://cdn.bihe0832.com/tools/test.html'
           },
           
           {
