错误路径修复

--- a/blank_simple.html
+++ b/blank_simple.html
@@ -16,7 +16,7 @@
       s.parentNode.insertBefore(mta, s);
     })();
   </script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/res/css/global.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/css/global.css" />
   <style type="text/css">
     body {
       line-height: 1;
