--- a/tools/index.html
+++ b/tools/index.html
@@ -5,7 +5,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="format-detection" content="telephone=no" />
-  <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/res/images/zixie_32.ico" />
+  <link rel="Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico" />
 
   <title>子勰常用开发工具</title>
   <meta name="author" CONTENT="子勰(bihe0832), code@bihe0832.com" />
@@ -70,7 +70,7 @@
       s.parentNode.insertBefore(mta, s);
     })();
   </script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/res/css/global.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.bihe0832.com/css/global.css" />
   <style type="text/css">
     * {
       margin: 0;
