颜色透明度合并

--- a/tools/index.html
+++ b/tools/index.html
@@ -247,10 +247,10 @@
         toolList: [
           {
             isOwner: true,
-            name: 'Android  JSBridge 调试',
-            intro: '子勰的Jsbridge测试Demo，使用方式链接有介绍',
-            img: 'https://android.bihe0832.com/doc/tools/jsbridge_result.png',
-            url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
+            name: 'AAF',
+            intro: 'Android 终端开发方案 AAF 相关链接，例如源码、Demo、文档等',
+            img: 'https://blog.bihe0832.com/public/img/androidappfactory.png',
+            url: 'https://android.bihe0832.com/doc/summary/links.html'
           },
           {
             isOwner: true,
@@ -261,6 +261,13 @@
           },
           {
             isOwner: true,
+            name: 'Android  JSBridge 调试',
+            intro: '子勰的Jsbridge测试Demo，使用方式链接有介绍',
+            img: 'https://android.bihe0832.com/doc/tools/jsbridge_result.png',
+            url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
+          },
+          {
+            isOwner: true,
             name: 'Android开发常用工具资源',
             intro: '图标制作、 Android 权限列表及设置权限的跳转方式、Material Design 指南及调色板',
             img: 'https://cdn.bihe0832.com/images/cv.png',
@@ -268,10 +275,10 @@
           },
           {
             isOwner: true,
-            name: 'AAF',
-            intro: 'Android 终端开发方案 AAF 相关链接，例如源码、Demo、文档等',
-            img: 'https://blog.bihe0832.com/public/img/androidappfactory.png',
-            url: 'https://android.bihe0832.com/doc/summary/links.html'
+            name: '常用颜色',
+            intro: '常用颜色、透明度查询等参考工具，独立开发时，可临时顶替使用',
+            img: './color.jpeg',
+            url: './color.html'
           },
           {
             isOwner: true,
@@ -280,34 +287,19 @@
             img: 'https://cdn.bihe0832.com/images/cv.png',
             url: 'https://cdn.bihe0832.com/tools/test.html'
           },
-          
-          {
-            isOwner: true,
-            name: '颜色透明度对照表',
-            intro: '颜色透明度对照表',
-            img: 'https://cdn.bihe0832.com/images/cv.png',
-            url: 'https://blog.bihe0832.com/color-alpha.html'
-          },
-          {
-          isOwner: true,
-          name: '常用颜色',
-          intro: '常用颜色参考工具，独立开发时，可临时顶替使用',
-          img: './color.jpeg',
-          url: './color.html'
-        },
-        {
-            isOwner: true,
-            name: 'Markdown',
-            intro: 'Markdown 转表格及表格格式优化',
-            img: 'https://blog.bihe0832.com/public/images/markdown_table_new.gif',
-            url: 'https://blog.bihe0832.com/markdow_advanced.html'
-          },
           {
             isOwner: false,
             name: '查询、编码、转义类工具',
             intro: 'MD5、Timestamp、Unicode编码、加解密如AES、DES；emoji 、RGB转HEX、代码格式化如 HTML、XML、CSS、JSON、Java、SQL',
             img: 'http://csstools.chinaz.com/tools/images/public/logos/logo-index.png',
             url: 'https://blog.bihe0832.com/tools_for_developer.html'
+          },
+          {
+              isOwner: true,
+              name: 'Markdown',
+              intro: 'Markdown 转表格及表格格式优化',
+              img: 'https://blog.bihe0832.com/public/images/markdown_table_new.gif',
+              url: 'https://blog.bihe0832.com/markdow_advanced.html'
           },
           {
             isOwner: false,
