--- a/tools/color.html
+++ b/tools/color.html
@@ -264,6 +264,16 @@
     </ul>
   </section>
 
+  <!--透明度-->
+  <section class="p-color g-box">
+    <h1>16进制透明度查询，以红色为基准（点击复制）</h1>
+    <ul class="color">
+      <li v-for="(item, index) in alphaList" class="button" @click="copyToClipboard(item)">
+        <div class="case " :style="`color:#000000; background-color:rgba(255, 0, 0, ${index/100});; border: solid 1px rgba(255, 0, 0, ${index/100});;`">{{index}}% {{item}}</div>
+      </li>
+    </ul>
+  </section>
+
   <!--常用黑色字体颜色-->
   <section class="p-font g-box">
     <h1>常用黑色字体颜色</h1>
@@ -415,7 +425,109 @@ new Vue({
         '#cccccc',
         '#dddddd',
       ],
-
+      alphaList:[
+        '00',
+        '03',
+        '05',
+        '08',
+        '0A',
+        '0D',
+        '0F',
+        '12',
+        '14',
+        '17',
+        '1A',
+        '1C',
+        '1F',
+        '21',
+        '24',
+        '26',
+        '29',
+        '2B',
+        '2E',
+        '30',
+        '33',
+        '36',
+        '38',
+        '3B',
+        '3D',
+        '40',
+        '42',
+        '45',
+        '47',
+        '4A',
+        '4D',
+        '4F',
+        '52',
+        '54',
+        '57',
+        '59',
+        '5C',
+        '5E',
+        '61',
+        '63',
+        '66',
+        '69',
+        '6B',
+        '6E',
+        '70',
+        '73',
+        '75',
+        '78',
+        '7A',
+        '7D',
+        '80',
+        '82',
+        '85',
+        '87',
+        '8A',
+        '8C',
+        '8F',
+        '91',
+        '94',
+        '96',
+        '99',
+        '9C',
+        '9E',
+        'A1',
+        'A3',
+        'A6',
+        'A8',
+        'AB',
+        'AD',
+        'B0',
+        'B3',
+        'B5',
+        'B8',
+        'BA',
+        'BD',
+        'BF',
+        'C2',
+        'C4',
+        'C7',
+        'C9',
+        'CC',
+        'CF',
+        'D1',
+        'D4',
+        'D6',
+        'D9',
+        'DB',
+        'DE',
+        'E0',
+        'E3',
+        'E6',
+        'E8',
+        'EB',
+        'ED',
+        'F0',
+        'F2',
+        'F5',
+        'F7',
+        'FA',
+        'FC',
+        'FF'
+      ]
     }
   },
 
