添加apk下载地址

--- a/tools/test.html
+++ b/tools/test.html
@@ -296,6 +296,10 @@ new Vue({
           { name: 'Vue', onlineURL: 'http://cdn.bihe0832.com/js/js/vue/2.6.10/vue.min.js' },
           { name: '多码合一', onlineURL: 'http://cdn.bihe0832.com/js/brower.js' },
           { name: '无加密M3U8', onlineURL: 'http://1257120875.vod2.myqcloud.com/0ef121cdvodtransgzp1257120875/3055695e5285890780828799271/v.f230.m3u8' },
+          { name: 'APK下载', onlineURL: 'https://cdn.bihe0832.com/app/release/ZAPK_official.apk' },
+          { name: 'Split APK下载', onlineURL: 'http://dldir1.qq.com/INO/packages/inner/20200917/com.supercell.brawlstars.zip' },
+          { name: 'OBB APK下载', onlineURL: 'http://dldir1.qq.com/INO/packages/inner/20200917/jp.co.sumzap.pj0007.zip' },
+          { name: '超2G OBB APK下载', onlineURL: 'http://dldir1.qq.com/INO/packages/inner/20200927/com.herogame.gplay.lastdayrulessurvival_20200927.zip' },
         ]
     }
   },
