--- a/tools/test.html
+++ b/tools/test.html
@@ -278,6 +278,10 @@ new Vue({
         'fuyuan.mp3',
         'time.mp3',
         'xiangsi.mp3',
+        '02.pcm',
+        '03.pcm',
+        '02.wav',
+        '03.wav',
         ],
       videoList:[
         'https://cdn.bihe0832.com/video/190312083533415853.mp4',
