--- a/tools/test.html
+++ b/tools/test.html
@@ -272,6 +272,7 @@ new Vue({
         'cv.png',
         'cv_1080.jpg',
         'cv_512.jpg',
+        'cv_v.png',
       ],
       audioList:[
         'friend.mp3',
