--- a/tools/test.html
+++ b/tools/test.html
@@ -235,7 +235,7 @@
   </section>
   <!--常用视频-->
   <section class="p-video g-box">
-    <h1>常用视频</h1>
+    <h1>常用视频，来自（http://www.mtime.com/）</h1>
     <ul>
       <li v-for="item in videoList" @click="copyToClipboard(item)">
         <video :src="item" controls></video>
@@ -286,11 +286,11 @@ new Vue({
         '03.wav',
         ],
       videoList:[
-        'https://cdn.bihe0832.com/video/190312083533415853.mp4',
+        'https://vfx.mtime.cn/Video/2018/11/09/mp4/181109123910577905.mp4',
         'https://vfx.mtime.cn/Video/2019/03/18/mp4/190318214226685784.mp4',
-        'https://vfx.mtime.cn/Video/2019/03/14/mp4/190314223540373995.mp4',
-        'https://vfx.mtime.cn/Video/2019/03/19/mp4/190319104618910544.mp4',
-        ],
+        'https://vfx.mtime.cn/Video/2017/03/23/mp4/170323162619859866.mp4',
+        'https://vfx.mtime.cn/Video/2020/05/28/mp4/200528075314608041.mp4',
+      ],
       dataList:[
         {
           title:"网页及前端资源",
