--- a/tools/index.html
+++ b/tools/index.html
@@ -288,6 +288,20 @@
             url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
           },
           {
+              isOwner: true,
+              name: 'Git 常用命令',
+              intro: 'Git 常用命令整理（包括branch、tag、多账号配置、日志等~）',
+              img: 'https://cdn.bihe0832.com/images/cv.png',
+              url: 'https://blog.bihe0832.com/git-client-cmd.html'
+          },
+          {
+              isOwner: true,
+              name: 'Linux & MacOS 常用命令',
+              intro: 'Linux & MacOS 常用命令，例如xargs、find、kil、chmo、chown、crontab、pbcopy、pbpaste、open、screencapture、lsof',
+              img: 'https://cdn.bihe0832.com/images/cv.png',
+              url: 'https://blog.bihe0832.com/mac_linux_command_during_developping.html'
+          },
+          {
             isOwner: false,
             name: '查询、编码、转义类工具',
             intro: 'MD5、Timestamp、Unicode编码、加解密如AES、DES；emoji 、RGB转HEX、代码格式化如 HTML、XML、CSS、JSON、Java、SQL',
