增加封面图

--- a/tools/index.html
+++ b/tools/index.html
@@ -270,14 +270,14 @@
             isOwner: true,
             name: '常用颜色',
             intro: '常用颜色、透明度查询等参考工具，独立开发时，可临时顶替使用',
-            img: './color.jpeg',
+            img: './images/color.jpeg',
             url: './color.html'
           },
           {
             isOwner: true,
             name: 'Android开发常用工具资源',
             intro: '图标制作、 Android 权限列表及设置权限的跳转方式、Material Design 指南及调色板',
-            img: 'https://cdn.bihe0832.com/images/cv.png',
+            img: './images/android_res.png',
             url: 'https://blog.bihe0832.com/my_android.html'
           },
           {
@@ -326,21 +326,21 @@
             isOwner: true,
             name: 'Logo制作',
             intro: '制作类似pubhorn 的Icon',
-            img: 'https://blog.bihe0832.com/public/img/androidappfactory.png',
+            img: './images/logo_diy.jpg',
             url: 'https://cdn.bihe0832.com/tools/logo/index.html'
           },
           {
             isOwner: true,
             name: '多码合一',
             intro: '通过这几个JS接口，可以轻松获取到当前打开页面的浏览器类型',
-            img: 'https://cdn.bihe0832.com/images/cv.png',
+            img: './images/multi_code.png',
             url: 'https://microdemo.bihe0832.com/MultiQrcode/index.html'
           },
           {
             isOwner: true,
             name: 'ascii字符画',
             intro: '根据文字、图片、流程图生成字符画：',
-            img: 'https://cdn.bihe0832.com/images/cv.png',
+            img: './images/ascii.png',
             url: 'https://blog.bihe0832.com/tools_for_developer.html'
           },
           {
