--- a/tools/index.html
+++ b/tools/index.html
@@ -338,6 +338,13 @@
           },
           {
             isOwner: true,
+            name: 'shields.io',
+            intro: '专为开源项目设计的在Github、文档等场景展示项目各种信息的工具库',
+            img: './images/shields_io.png',
+            url: 'https://img.shields.io/'
+          },
+          {
+            isOwner: true,
             name: 'ascii字符画',
             intro: '根据文字、图片、流程图生成字符画：',
             img: './images/ascii.png',
@@ -350,9 +357,6 @@
             img: 'https://cdn.bihe0832.com/images/cv.png',
             url: 'http://blog.bihe0832.com/pages/font-awesome.html'
           },
-
-
-          
         ]
       }
     }
