--- a/tools/index.html
+++ b/tools/index.html
@@ -288,6 +288,13 @@
             url: 'https://cdn.bihe0832.com/tools/jsbridge/index.html'
           },
           {
+            isOwner: true,
+            name: 'Smart Resize',
+            intro: '也许是世界上最快且最智能的在线批量裁剪图片工具',
+            img: 'https://www.smartresize.com/css/logo.png',
+            url: 'https://www.smartresize.com/zh-cn'
+          },
+          {
               isOwner: true,
               name: 'Git 常用命令',
               intro: 'Git 常用命令整理（包括branch、tag、多账号配置、日志等~）',
@@ -323,7 +330,7 @@
             url: 'https://blog.bihe0832.com/tools_for_developer.html'
           },
           {
-            isOwner: true,
+            isOwner: false,
             name: 'Logo制作',
             intro: '制作类似pubhorn 的Icon',
             img: './images/logo_diy.jpg',
@@ -337,14 +344,14 @@
             url: 'https://microdemo.bihe0832.com/MultiQrcode/index.html'
           },
           {
-            isOwner: true,
+            isOwner: false,
             name: 'shields.io',
             intro: '专为开源项目设计的在Github、文档等场景展示项目各种信息的工具库',
             img: './images/shields_io.png',
             url: 'https://img.shields.io/'
           },
           {
-            isOwner: true,
+            isOwner: false,
             name: 'ascii字符画',
             intro: '根据文字、图片、流程图生成字符画：',
             img: './images/ascii.png',
