--- a/tools/index.html
+++ b/tools/index.html
@@ -36,7 +36,7 @@
             "url": "https://blog.bihe0832.com/public/img/head.jpg"
           }
         },
-      "image": "https://blog.bihe0832.com/public/img/cv.png",
+      "image": "https://blog.bihe0832.com/public/img/cv_512.jpg",
       "mainEntityOfPage":{"@type":"WebPage",
       "@id":"https://blog.bihe0832.com/"},
       "@context":"http://schema.org"
@@ -263,7 +263,7 @@
             isOwner: true,
             name: '开发常用资源',
             intro: '开发中常用的资源，静态资源例如空页面、CSS；方便开发测试的各种素材等',
-            img: 'https://cdn.bihe0832.com/images/cv.png',
+            img: 'https://cdn.bihe0832.com/images/cv_512.jpg',
             url: 'https://cdn.bihe0832.com/tools/test.html'
           },
           {
@@ -298,14 +298,14 @@
               isOwner: true,
               name: 'Git 常用命令',
               intro: 'Git 常用命令整理（包括branch、tag、多账号配置、日志等~）',
-              img: 'https://cdn.bihe0832.com/images/cv.png',
+              img: 'https://cdn.bihe0832.com/images/cv_512.jpg',
               url: 'https://blog.bihe0832.com/git-client-cmd.html'
           },
           {
               isOwner: true,
               name: 'Linux & MacOS 常用命令',
               intro: 'Linux & MacOS 常用命令，例如xargs、find、kil、chmo、chown、crontab、pbcopy、pbpaste、open、screencapture、lsof',
-              img: 'https://cdn.bihe0832.com/images/cv.png',
+              img: 'https://cdn.bihe0832.com/images/cv_512.jpg',
               url: 'https://blog.bihe0832.com/mac_linux_command_during_developping.html'
           },
           {
@@ -361,7 +361,7 @@
             isOwner: true,
             name: 'font-awesome',
             intro: '专为Bootstrap设计的，一个字体文件， 249 个图标，用CSS控制样式',
-            img: 'https://cdn.bihe0832.com/images/cv.png',
+            img: 'https://cdn.bihe0832.com/images/cv_512.jpg',
             url: 'http://blog.bihe0832.com/pages/font-awesome.html'
           },
         ]
