子勰的博客

--- a/tools/index.html
+++ b/tools/index.html
@@ -223,7 +223,7 @@
   <div id="app" v-cloak>
     <div class="title">子勰常用开发工具</div>
     <div class="userinfo">
-      <a href="https://blog.bihe0832.com/" target="_blank"><img src="https://img.shields.io/badge/Blog-子勰-brightgreen"></a>
+      <a href="https://blog.bihe0832.com/" target="_blank"><img src="https://img.shields.io/badge/Blog-子勰的博客-brightgreen"></a>
       <a href="https://github.com/bihe0832" target="_blank"><img src="https://img.shields.io/badge/Github-bihe0832-brightgreen"></a>
     </div>
     <section>
