--- a/tools/test.html
+++ b/tools/test.html
@@ -321,7 +321,11 @@ new Vue({
           title:"其他资源",
           data:
           [
-            { name: '无加密M3U8', onlineURL: 'http://1257120875.vod2.myqcloud.com/0ef121cdvodtransgzp1257120875/3055695e5285890780828799271/v.f230.m3u8' },
+            { name: 'CCTV1高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv1hd.m3u8' },
+            { name: 'CCTV3高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv3hd.m3u8' },
+            { name: 'CCTV5高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv5hd.m3u8' },
+            { name: 'CCTV5+高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv5phd.m3u8' },
+            { name: 'CCTV6高清', onlineURL: 'http://ivi.bupt.edu.cn/hls/cctv6hd.m3u8' }
           ]
         },
       ]
