--- a/tools/jsbridge/index.html
+++ b/tools/jsbridge/index.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="https://cdn.bihe0832.com/css/global.css" type="text/css" media="screen" />
 <link rel = "Shortcut Icon" href="https://blog.bihe0832.com/public/img/favicon.ico">
 <script type="text/javascript" src="https://cdn.bihe0832.com/js/jsbridge.js" charset="UTF-8"></script>
+<script type="text/javascript" src="https://cdn.bihe0832.com/js/vconsole.min.js" charset="UTF-8"></script>
+
 <style type="text/css">
   body {
       font-family: "Microsoft Yahei", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
@@ -55,6 +57,8 @@
     </ul>
     </p>
     <script type="text/javascript" charset="UTF-8">
+      var vConsole = new window.VConsole();
+
       var _mtac = {};
       (function() {
         var mta = document.createElement("script");
