--- a/tools/test.html
+++ b/tools/test.html
@@ -304,6 +304,7 @@ new Vue({
             { name: 'bootstrap', onlineURL: 'http://cdn.bihe0832.com/css/bootstrap.min.css' },
             { name: 'jquery', onlineURL: 'http://cdn.bihe0832.com/js/jquery-1.9.1.min.js' },
             { name: 'Vue', onlineURL: 'http://cdn.bihe0832.com/js/js/vue/2.6.10/vue.min.js' },
+            { name: 'vConsole', onlineURL: 'https://cdn.bihe0832.com/js/vconsole.min.js' },
             { name: '多码合一', onlineURL: 'http://cdn.bihe0832.com/js/brower.js' },
           ]
         },
