--- a/tools/jsbridge/index.html
+++ b/tools/jsbridge/index.html
@@ -58,16 +58,9 @@
     </p>
     <script type="text/javascript" charset="UTF-8">
       var vConsole = new window.VConsole();
-
-      var _mtac = {};
-      (function() {
-        var mta = document.createElement("script");
-        mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
-        mta.setAttribute("name", "MTAH5");
-        mta.setAttribute("sid", "500724774");
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(mta, s);
-      })();
+      document.addEventListener('activityStateCallback', function (e) {
+          console.log(e);
+       }, false);
   </script>
   </body>
 </html>
