--- a/tools/test.html
+++ b/tools/test.html
@@ -211,7 +211,7 @@
 <body>
 <section id="app" v-cloak>
   <div class="c-tips" :class="{'c-tips--show':showTips}">{{tips}}</div>
-  <a class="p-other" target="_blank" href="http://cdn.bihe0832.com/tools/index.html">更多实用工具</a>
+  <a class="p-other" target="_blank" href="https://cdn.bihe0832.com/tools/index.html">更多实用工具</a>
 
   <!--提示-->
   <section class="p-action g-box">常用资源文件(所有资源点击即可复制URL)</section>
